test/com/facebook/buck/parser/testdata/python_user_defined_rules/errors/shadowing_name/BUCK.fixture
load("//errors/shadowing_name:shadow.bzl", "shadow")

shadow(name = "shadowed")
